se corrigió la ruta

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jabonarte",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jsegoviaa.github.io/jabonarte/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -18,6 +19,8 @@
     "sweetalert2": "^10.3.5"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
