--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "sweetalert2": "^10.3.5"
+    "sweetalert2": "^10.3.5",
+    "swiper": "^6.4.10"
   },
   "scripts": {
     "start": "react-scripts start",
