--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jabonarte",
   "version": "1.0.0",
+  "homepage": "https://jabonartesanalmx.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
